--- a/SpellCheckerDemo/SpellCheckerDemo.csproj
+++ b/SpellCheckerDemo/SpellCheckerDemo.csproj
@@ -9,7 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Logo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MouseKeyHook" Version="5.7.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Logo.png" />
   </ItemGroup>
 
 </Project>
