--- a/SpellCheckerDemo/SpellCheckerDemo.csproj
+++ b/SpellCheckerDemo/SpellCheckerDemo.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="MouseKeyHook" Version="5.7.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
